--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-body {
-    background-color: black;
-    color: rgb(255, 255, 255);
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -31,4 +29,31 @@ html {
 
 ::-webkit-scrollbar{
     display: none;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background: var(--color-bg);
+    color: var(--color-white);
+    line-height: 1.7;
+    background-image: url(../src/assets/bg-texture.png);
+}
+
+/* ==================Genral Css class ====================*/
+
+.container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
+}
+
+h1,h2,h3,h4,h5 {
+    font-weight: 500;
+}
+
+h1{
+    font-size: 2.5rem;
+}
+
+section {
+    margin-top: 8rem;
 }
